Fix menu cutoff

--- a/ui/v2.5/src/components/Settings/styles.scss
+++ b/ui/v2.5/src/components/Settings/styles.scss
@@ -131,6 +131,11 @@
   }
 }
 
+#stashes .card {
+  // override overflow so that menu shows correctly
+  overflow: visible;
+}
+
 #stash-table {
   .setting {
     justify-content: start;
